# flutter_xprinter_sdk

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/libs/: printer-lib-3.2.0.aar
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_xprinter_sdk.podspec
ios/Classes/: XprinterSdkManager.m  XprinterSdkPlugin.m
ios/flutter_xprinter_sdk/: Package.swift
ios/flutter_xprinter_sdk/Frameworks/PrinterSDK.xcframework/: Info.plist
lib/: flutter_xprinter_sdk.dart
lib/src/: alignment.dart  barcode_type.dart  code_page.dart  connection_type.dart  cp866_encoder.dart  divider_style.dart  image_dither.dart  image_loader.dart  method_channel.dart  pos_printer.dart  printer_status.dart  qr_correction.dart  receipt_layout.dart  text_attribute.dart  xprinter_bluetooth.dart  xprinter_connection.dart  xprinter_exception.dart
test/: pos_printer_test.dart  printer_status_test.dart  receipt_layout_test.dart  xprinter_bluetooth_test.dart  xprinter_connection_test.dart
windows/: CMakeLists.txt  xprinter_sdk_plugin.cpp  xprinter_sdk_plugin.h  xprinter_sdk_plugin_c_api.cpp
windows/include/flutter_xprinter_sdk/: xprinter_sdk_plugin_c_api.h
(+9 files in other folders)
